@@ -9,7 +9,7 @@
 namespace khmer
 {
 
-
+#ifdef WITH_INTERNAL_METRICS
 IPerformanceMetrics::
 IPerformanceMetrics( )
 { }
@@ -28,7 +28,7 @@ _timespec_diff_in_nsecs( timespec const &start, timespec const &stop )
 	    ((stop.tv_sec * 1000000000U) + (uint64_t)stop.tv_nsec)
 	-   ((start.tv_sec * 1000000000U) + (uint64_t)start.tv_nsec);
 }
-
+#endif
 } // namespace khmer
 
 // vim: set ft=cpp sts=4 sw=4 tw=79:
